Está quaseeeeeeee a nascer o ZÉZÉ

--- a/index.html
+++ b/index.html
@@ -58,12 +58,14 @@
             <button class="car-btn-right">&gt;</button>
             <div>
                 <img src="imgs/carrossel/Spoticar_Portugal-allbrands_desktop.jpeg">
-                <img src="imgs/carrossel/ap_Spoticar_updates-dezembro_heroshot- homepage_a01_Fiat_1650x430.jpeg">
-                <img
-                    src="imgs/carrossel/ap_Spoticar_updates-dezembro_heroshot- homepage_a01_Citroen-C5-Aircross_1650x430 .jpeg">
+                <div id="text_img1">
+                    <p><strong>SPOTICAR</strong><br><br>OS CARROS USADOS DAS REDES ABARTH, CITROEN, FIAT, JEEP E PEUGEOT</p>
+                    <p><span id="_1">COMPRAR</span> ou <span id="_2">VENDER</span></p>
+                </div>
+                    <img src="imgs/carrossel/ap_Spoticar_updates-dezembro_heroshot- homepage_a01_Fiat_1650x430.jpeg">
+                <img src="imgs/carrossel/ap_Spoticar_updates-dezembro_heroshot- homepage_a01_Citroen-C5-Aircross_1650x430 .jpeg">
             </div>
         </div>
-
         <div id="search">
             <ul id="search-index">
                 <li>MARCA/MODELO</li>
@@ -89,69 +91,70 @@
         <div>
             <img id="brand-banner" src="imgs/banner/banner_desktop_marcas.jpg">
             <img id="brand-banner-media" src="imgs/banner/banner_mobile_marcas.jpeg">
-            <div id="interim-info">
-                <h2>PESQUISE E RESERVE ON-LINE</h2>
-                <p>Na <strong>Spoticar</strong>, dispomos de um vasto stock de veículos semi-novos aos quais pode aceder
-                    de
-                    forma cómoda. Pesquise e reserve on-line.</p>
-                <p>Agora pode optar pelo nosso serviço de <span id="underline">entrega em sua casa<sup>1</sup></span>.
-                    De outra forma, os nossos 80
-                    pontos de venda
-                    estão prontos para o receber.</p>
-                <p><sup>1</sup> Nos concessionários aderentes.</p>
-            </div>
-            <div id="compromises-info">
-                <h2><a>COMPROMISSOS DO SITE</a></h2>
-                <ul>
-                    <li><img src="imgs/icons/check.png">
-                        <p>SATISFAÇÃO OU REEMBOLSO</p>
-                    </li>
-                    <li>
-                        <img src="imgs/icons/car.png">
-                        <p>REDE DE ASSISTÊNCIA NACIONAL</p>
-                    </li>
-                    <li>
-                        <img src="imgs/icons/cell.png">
-                        <p>ASSISTÊNCIA EM VIAGEM</p>
-                    </li>
-                    <li>
-                        <img src="imgs/icons/calc.png">
-                        <p>FINANCIAMENTO PERSONALIZADO</p>
-                    </li>
-                </ul>
-                <p id="phrase">VER OS NOSSOS COMPROMISSO, AS NOSSAS GARANTIAS E AS VANTAGENS SPOTICAR PARA A COMPRA DE
-                    UM
-                    VEÍCULO ELÉTRICO OU HÍBRIDO > </p>
-            </div>
-            <div id="opportunities-info">
-                <h2>OPORTUNIDADES SELECIONADAS POR CATEGORIA</h2>
-                <ul>
-                    <li>
-                        <img src="imgs/icons/1.png">
-                        <p>OPORTUNIDADES PREMIUM</p>
-                    </li>
-                    <li>
-                        <img src="imgs/icons/2.png">
-                        <p>OPORTUNIDADES PREÇOS BAIXOS</p>
-                    </li>
-                    <li>
-                        <img src="imgs/icons/3.png">
-                        <p>USADOS EM CAMPANHA</p>
-                    </li>
-                    <li>
-                        <img src="imgs/icons/4.png">
-                        <p>COMERCIAIS USADOS</p>
-                    </li>
-                    <li>
-                        <img src="imgs/icons/5.png">
-                        <p>OPORTUNIDADES ELÉTRICAS</p>
-                    </li>
-                    <li>
-                        <img src="imgs/icons/6.png">
-                        <p>OPORTUNIDADES HÍBRIDAS</p>
-                    </li>
-                </ul>
-            </div>
+        </div>
+        <div id="interim-info">
+            <h2>PESQUISE E RESERVE ON-LINE</h2>
+            <p>Na <strong>Spoticar</strong>, dispomos de um vasto stock de veículos semi-novos aos quais pode aceder
+                de
+                forma cómoda. Pesquise e reserve on-line.</p>
+            <p>Agora pode optar pelo nosso serviço de <span id="underline">entrega em sua casa<sup>1</sup></span>.
+                De outra forma, os nossos 80
+                pontos de venda
+                estão prontos para o receber.</p>
+            <p><sup>1</sup> Nos concessionários aderentes.</p>
+        </div>
+        <div id="compromises-info">
+            <h2><a>COMPROMISSOS DO SITE</a></h2>
+            <ul>
+                <li><img src="imgs/icons/check.png">
+                    <p>SATISFAÇÃO OU REEMBOLSO</p>
+                </li>
+                <li>
+                    <img src="imgs/icons/car.png">
+                    <p>REDE DE ASSISTÊNCIA NACIONAL</p>
+                </li>
+                <li>
+                    <img src="imgs/icons/cell.png">
+                    <p>ASSISTÊNCIA EM VIAGEM</p>
+                </li>
+                <li>
+                    <img src="imgs/icons/calc.png">
+                    <p>FINANCIAMENTO PERSONALIZADO</p>
+                </li>
+            </ul>
+            <p id="phrase">VER OS NOSSOS COMPROMISSO, AS NOSSAS GARANTIAS E AS VANTAGENS SPOTICAR PARA A COMPRA DE
+                UM
+                VEÍCULO ELÉTRICO OU HÍBRIDO > </p>
+        </div>
+        <div id="opportunities-info">
+            <h2>OPORTUNIDADES SELECIONADAS POR CATEGORIA</h2>
+            <ul>
+                <li>
+                    <img src="imgs/icons/1.png">
+                    <p>OPORTUNIDADES PREMIUM</p>
+                </li>
+                <li>
+                    <img src="imgs/icons/2.png">
+                    <p>OPORTUNIDADES PREÇOS BAIXOS</p>
+                </li>
+                <li>
+                    <img src="imgs/icons/3.png">
+                    <p>USADOS EM CAMPANHA</p>
+                </li>
+                <li>
+                    <img src="imgs/icons/4.png">
+                    <p>COMERCIAIS USADOS</p>
+                </li>
+                <li>
+                    <img src="imgs/icons/5.png">
+                    <p>OPORTUNIDADES ELÉTRICAS</p>
+                </li>
+                <li>
+                    <img src="imgs/icons/6.png">
+                    <p>OPORTUNIDADES HÍBRIDAS</p>
+                </li>
+            </ul>
+        </div>
     </main>
     <div id="pre-show">
         <ul>
@@ -338,7 +341,6 @@
             </div>
             <div class="centered-bottom">LEIA MAIS</div>
         </div>
-
         <div class="banner1">
             <img src="imgs/banner/Occ_banner_pre-footer2.jpeg" class="banner">
             <div class="centered">
@@ -454,7 +456,7 @@
             <h2 id="li5col1">
                 MARCAS
             </h2>
-            <ul id="li6col1" class="brands">
+            <ul id="li6col1">
                 <li>
                     OPEL USADOS
                 </li><br>
@@ -466,7 +468,7 @@
                 <li>Mokka</li>
                 <li>Outros Modelos</li>
             </ul>
-            <ul id="li6col2" class="brands">
+            <ul id="li6col2">
                 <li>
                     CITROEN USADOS
                 </li><br>
@@ -478,7 +480,7 @@
                 <li>Berlingo</li>
                 <li>Outros Modelos</li>
             </ul>
-            <ul id="li6col3" class="brands">
+            <ul id="li6col3">
                 <li>
                     PEUGOT USADOS
                 </li><br>
@@ -490,7 +492,7 @@
                 <li>Partener</li>
                 <li>Outros Modelos</li>
             </ul>
-            <ul id="li6col4" class="brands">
+            <ul id="li6col4">
                 <li>
                     DS AUTOMOBILES USADOS
                 </li><br>
@@ -499,7 +501,7 @@
                 <li>DS4</li>
                 <li>DS9</li>
             </ul>
-            <ul id="li6col5" class="brands">
+            <ul id="li6col5">
                 <li>
                     FIAT USADOS
                 </li><br>
@@ -511,13 +513,13 @@
                 <li>Talento</li>
                 <li>Outros Modelos</li>
             </ul>
-            <ul id="li6col6" class="brands">
+            <ul id="li6col6">
                 <li>
                     VOLKSWAGEN
                 </li><br>
                 <li>Sem resultados</li>
             </ul>
-            <ul id="li7col1" class="brands">
+            <ul id="li7col1">
                 <li>
                     RENAUT
                 </li><br>
@@ -527,14 +529,14 @@
                 <li>Clio</li>
                 <li>Grand Scenic</li>
             </ul>
-            <ul id="li7col2" class="brands">
+            <ul id="li7col2">
                 <li>
                     NISSAN
                 </li><br>
                 <li>Qashqai</li>
                 <li>X-Trail</li>
             </ul>
-            <ul id="li7col3" class="brands">
+            <ul id="li7col3">
                 <li>
                     KIA
                 </li><br>
@@ -543,14 +545,14 @@
                 <li>Sportage</li>
                 <li>Stonic</li>
             </ul>
-            <ul id="li7col4" class="brands">
+            <ul id="li7col4">
                 <li>
                     FORD
                 </li><br>
                 <li>Fiesta</li>
                 <li>Toumeo</li>
             </ul>
-            <ul id="li7col5" class="brands">
+            <ul id="li7col5">
                 <li>
                     SEAT
                 </li><br>
@@ -568,10 +570,10 @@
                 <li>MITSUBISHI</li>
                 <li>MINI</li>
                 <li>BMW</li>
-                <li class="all">VER TUDO</li>
+                <li>VER TUDO</li>
             </ul>
         </div>
-        <ul id="footer-footer" class="last_line">
+        <ul id="footer-footer">
             <li>Mapa do site</li>
             <li>Mapa do site retoma</li>
             <li>DS Certified</li>
