zeze triplo ze dos zes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-PT">
 
 <head>
     <link href="style.css" rel="stylesheet">
+    <link href="imgs/favicon.ico" rel="icon">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>SPOTICAR | Compra e Venda de Carros</title>
 </head>
 
 <body>
@@ -54,16 +58,18 @@
     </header>
     <main>
         <div class="carrossel">
-            <button class="car-btn-left">&lt;</button>
-            <button class="car-btn-right">&gt;</button>
+            <button type="button" class="car-btn-left">&lt;</button>
+            <button type="button" class="car-btn-right">&gt;</button>
             <div>
                 <img src="imgs/carrossel/Spoticar_Portugal-allbrands_desktop.jpeg">
                 <div id="text_img1">
-                    <p><strong>SPOTICAR</strong><br><br>OS CARROS USADOS DAS REDES ABARTH, CITROEN, FIAT, JEEP E PEUGEOT</p>
+                    <p><strong>SPOTICAR</strong><br><br>OS CARROS USADOS DAS REDES ABARTH, CITROEN, FIAT, JEEP E PEUGEOT
+                    </p>
                     <p><span id="_1">COMPRAR</span> ou <span id="_2">VENDER</span></p>
                 </div>
-                    <img src="imgs/carrossel/ap_Spoticar_updates-dezembro_heroshot- homepage_a01_Fiat_1650x430.jpeg">
-                <img src="imgs/carrossel/ap_Spoticar_updates-dezembro_heroshot- homepage_a01_Citroen-C5-Aircross_1650x430 .jpeg">
+                <img src="imgs/carrossel/ap_Spoticar_updates-dezembro_heroshot- homepage_a01_Fiat_1650x430.jpeg">
+                <img
+                    src="imgs/carrossel/ap_Spoticar_updates-dezembro_heroshot- homepage_a01_Citroen-C5-Aircross_1650x430 .jpeg">
             </div>
         </div>
         <div id="search">
@@ -83,7 +89,9 @@
             <ul>
                 <li>ENCONTRE O SEU CARRO USADO</li>
                 <li>PESQUISA RÁPIDA</li>
-                <li>PESQUISA AVANÇADA</li><br><br>
+                <li>PESQUISA AVANÇADA</li>
+                <li></li>
+                <li></li>
                 <li>VER TODAS AS OFERTAS</li>
                 <li>VER VIATURAS</li>
             </ul>
@@ -155,200 +163,200 @@
                 </li>
             </ul>
         </div>
-    </main>
-    <div id="pre-show">
-        <ul>
-            <li>USADOS EM DESTAQUE ATÉ 15.000 €</li>
-            <li>&#60;</li>
-            <li>></li>
-            <li>VER TUDO</li>
-        </ul>
-    </div>
-    <div id="car-show">
-        <div class="cars">
-            <ul id="first-car">
-                <li>COMPARAR</li>
-                <li><img id="_1st" src="imgs/for_sale/PEUGEOT-108-202617_1.jpeg"></li>
-                <li>GARANTIA 36 MESES</li>
-                <li>PEUGEOT 108</li>
-                <li>1 1.0 VTI 72 CVM5 STYLE</li>
-                <li>38 327 Km | Gasolina</li>
-                <li>06-2021 | Manual</li>
-                <li>WLTP</li>
-                <li>Consumo misto 4.9l/100 km<br>CO2 misto 110 g/km</li>
-                <li><img src="imgs/icons/A.png" width="50px" height="15px"></li>
-            </ul>
-            <ul id="first-car-end">
-                <li>13 980 €</li>
-                <li>Spoticar Automóveis do Mondego Coimbra<br>Coimbra</li>
+        <div id="pre-show">
+            <ul>
+                <li>USADOS EM DESTAQUE ATÉ 15.000 €</li>
+                <li>&#60;</li>
+                <li>></li>
+                <li>VER TUDO</li>
             </ul>
         </div>
-        <div class="cars">
-            <ul id="snd-car">
-                <li>COMPARAR</li>
-                <li><img id="_2st" src="imgs/for_sale/PEUGEOT-108-202579_1.jpeg"></li>
-                <li>GARANTIA 36 MESES</li>
-                <li>PEUGEOT 108</li>
-                <li>1 1.0 VTI 72 CVM5 STYLE</li>
-                <li>33 614 Km | Gasolina</li>
-                <li>06-2021 | Manual</li>
-                <li>WLTP</li>
-                <li>Consumo misto 4.9l/100 km<br>CO2 misto 110 g/km</li>
-                <li><img src="imgs/icons/B.png" width="50px" height="15px"></li>
-            </ul>
-            <ul id="snd-car-end">
-                <li>13 980 €</li>
-                <li>Spoticar Automóveis do Mondego Coimbra<br>Coimbra</li>
-            </ul>
+        <div id="car-show">
+            <div class="cars">
+                <ul id="first-car">
+                    <li>COMPARAR</li>
+                    <li><img id="_1st" src="imgs/for_sale/PEUGEOT-108-202617_1.jpeg"></li>
+                    <li>GARANTIA 36 MESES</li>
+                    <li>PEUGEOT 108</li>
+                    <li>1 1.0 VTI 72 CVM5 STYLE</li>
+                    <li>38 327 Km | Gasolina</li>
+                    <li>06-2021 | Manual</li>
+                    <li>WLTP</li>
+                    <li>Consumo misto 4.9l/100 km<br>CO2 misto 110 g/km</li>
+                    <li><img src="imgs/icons/A.png" width="50px" height="15px"></li>
+                </ul>
+                <ul id="first-car-end">
+                    <li>13 980 €</li>
+                    <li>Spoticar Automóveis do Mondego Coimbra<br>Coimbra</li>
+                </ul>
+            </div>
+            <div class="cars">
+                <ul id="snd-car">
+                    <li>COMPARAR</li>
+                    <li><img id="_2st" src="imgs/for_sale/PEUGEOT-108-202579_1.jpeg"></li>
+                    <li>GARANTIA 36 MESES</li>
+                    <li>PEUGEOT 108</li>
+                    <li>1 1.0 VTI 72 CVM5 STYLE</li>
+                    <li>33 614 Km | Gasolina</li>
+                    <li>06-2021 | Manual</li>
+                    <li>WLTP</li>
+                    <li>Consumo misto 4.9l/100 km<br>CO2 misto 110 g/km</li>
+                    <li><img src="imgs/icons/B.png" width="50px" height="15px"></li>
+                </ul>
+                <ul id="snd-car-end">
+                    <li>13 980 €</li>
+                    <li>Spoticar Automóveis do Mondego Coimbra<br>Coimbra</li>
+                </ul>
+            </div>
+            <div class="cars">
+                <ul id="trd-car">
+                    <li>COMPARAR</li>
+                    <li><img id="_3st" src="imgs/for_sale/PEUGEOT-108-202617_1.jpeg"></li>
+                    <li>GARANTIA 36 MESES</li>
+                    <li>PEUGEOT 108</li>
+                    <li>1 1.0 VTI 72 CVM5 STYLE</li>
+                    <li>29 743 Km | Gasolina</li>
+                    <li>06-2021 | Manual</li>
+                    <li>WLTP</li>
+                    <li>Consumo misto 4.9l/100 km<br>CO2 misto 110 g/km</li>
+                    <li><img src="imgs/icons/A.png" width="50px" height="15px"></li>
+                </ul>
+                <ul id="trd-car-end">
+                    <li>13 980 €</li>
+                    <li>Spoticar Automóveis do Mondego Coimbra<br>Coimbra</li>
+                </ul>
+            </div>
         </div>
-        <div class="cars">
-            <ul id="trd-car">
-                <li>COMPARAR</li>
-                <li><img id="_3st" src="imgs/for_sale/PEUGEOT-108-202617_1.jpeg"></li>
-                <li>GARANTIA 36 MESES</li>
-                <li>PEUGEOT 108</li>
-                <li>1 1.0 VTI 72 CVM5 STYLE</li>
-                <li>29 743 Km | Gasolina</li>
-                <li>06-2021 | Manual</li>
-                <li>WLTP</li>
-                <li>Consumo misto 4.9l/100 km<br>CO2 misto 110 g/km</li>
-                <li><img src="imgs/icons/A.png" width="50px" height="15px"></li>
-            </ul>
-            <ul id="trd-car-end">
-                <li>13 980 €</li>
-                <li>Spoticar Automóveis do Mondego Coimbra<br>Coimbra</li>
-            </ul>
-        </div>
-    </div>
-    <div id="extra-finance">
-        <div class="calculator" id="sale">
-            <form>
-                <h2 id="sale1">Preço de Venda</h2>
-                <label for="maker">Marca</label>
-                <select title="Marca" name="maker" value="" required>
-                    <option disabled selected value> -- SELECIONE UMA MARCA -- </option>
-                    <option value="volvo">Volvo</option>
-                    <option value="saab">Saab</option>
-                    <option value="mercedes">Mercedes</option>
-                    <option value="audi">Audi</option>
-                    <option value="bmw">BMW</option>
-                    <option value="volkswagen">Volkswagen</option>
-                </select>
-                <span class="model-select">
-                    <label for="model">Modelo</label>
-                    <select title="Modelo" name="model" required>
+        <div id="extra-finance">
+            <div class="calculator" id="sale">
+                <form>
+                    <h2 id="sale1">Preço de Venda</h2>
+                    <label for="maker">Marca</label>
+                    <select title="Marca" name="maker" value="" required>
+                        <option disabled selected value> -- SELECIONE UMA MARCA -- </option>
+                        <option value="volvo">Volvo</option>
+                        <option value="saab">Saab</option>
+                        <option value="mercedes">Mercedes</option>
+                        <option value="audi">Audi</option>
+                        <option value="bmw">BMW</option>
+                        <option value="volkswagen">Volkswagen</option>
                     </select>
-                </span>
-                <label for="date">Ano de Matrícula</label>
-                <input name="date" title="Ano de Matrícula" type="number" placeholder="1900" min="1900" max="9999"
-                    step="1" required>
-                <label for="price">Preço de Venda</label>
-                <div class="price-input"><input name="price" title="Preço" type="number" placeholder="1000,00" min="500"
-                        max="9999999" step="1" required> €</div>
-                <label for="kms">Quilometragem</label>
-                <div class="km-input"><input name="kms" title="Quilometragem" type="number" placeholder="1000" min="0"
-                        max="9999999" step="1" required> km</div>
-                <input type="submit" value="Calcular">
-            </form>
-            <div class="results">
-                <div class="result-pane">
-                    <h3>Como Novo</h3>
-                    <ul>
-                        <li>9.999€</li>
-                    </ul>
+                    <span class="model-select">
+                        <label for="model">Modelo</label>
+                        <select title="Modelo" name="model" required>
+                        </select>
+                    </span>
+                    <label for="date">Ano de Matrícula</label>
+                    <input name="date" title="Ano de Matrícula" type="number" placeholder="1900" min="1900" max="9999"
+                        step="1" required>
+                    <label for="price">Preço de Venda</label>
+                    <div class="price-input"><input name="price" title="Preço" type="number" placeholder="1000,00"
+                            min="500" max="9999999" step="1" required> €</div>
+                    <label for="kms">Quilometragem</label>
+                    <div class="km-input"><input name="kms" title="Quilometragem" type="number" placeholder="1000"
+                            min="0" max="9999999" step="1" required> km</div>
+                    <input type="submit" value="Calcular">
+                </form>
+                <div class="results">
+                    <div class="result-pane">
+                        <h3>Como Novo</h3>
+                        <ul>
+                            <li>9.999€</li>
+                        </ul>
+                    </div>
+                    <div class="vertical-line">
+                    </div>
+                    <div class="result-pane">
+                        <h3>Bom Estado</h3>
+                        <ul>
+                            <li>9.999€</li>
+                        </ul>
+                    </div>
+                    <div class="vertical-line"></div>
+                    <div class="result-pane">
+                        <h3>Mau Estado</h3>
+                        <ul>
+                            <li>9.999€</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="vertical-line">
-                </div>
-                <div class="result-pane">
-                    <h3>Bom Estado</h3>
-                    <ul>
-                        <li>9.999€</li>
-                    </ul>
-                </div>
-                <div class="vertical-line"></div>
-                <div class="result-pane">
-                    <h3>Mau Estado</h3>
-                    <ul>
-                        <li>9.999€</li>
-                    </ul>
+            </div>
+            <div class="calculator" id="finance">
+                <form>
+                    <h2 id="sale2">Financiamento</h2>
+                    <label for="price">Depósito Inicial</label>
+                    <div class="price-input"><input name="price" title="Preço" type="number" placeholder="500" min="500"
+                            max="9999999" step="1" required> €
+                    </div>
+                    <label for="price-finance">Financiamento Necessário</label>
+                    <div class="price-input"><input name="price-finance" title="Preço" type="number" placeholder="500"
+                            min="500" max="9999999" step="1" required> €
+                    </div>
+                    <label for="years">Anos de Financiamento</label>
+                    <input name="years" title="Anos" type="number" placeholder="1" min="1" max="99" step="1" required>
+                    <input type="submit" value="Calcular">
+                </form>
+                <div class="results">
+                    <div class="result-pane">
+                        <h3>1.º Caso</h3>
+                        <ul>
+                            <li class="tot-amt"></li>
+                            <li class="len-amt"></li>
+                            <li class="dur-amt"></li>
+                            <li class="tax-amt"></li>
+                            <li class="spd-amt"></li>
+                            <li class="ini-amt"></li>
+                            <li class="mon-amt"></li>
+                        </ul>
+                    </div>
+                    <div class="vertical-line">
+                    </div>
+                    <div class="result-pane">
+                        <h3>2.º Caso</h3>
+                        <ul>
+                            <li class="tot-amt"></li>
+                            <li class="len-amt"></li>
+                            <li class="dur-amt"></li>
+                            <li class="tax-amt"></li>
+                            <li class="spd-amt"></li>
+                            <li class="ini-amt"></li>
+                            <li class="mon-amt"></li>
+                        </ul>
+                    </div>
+                    <div class="vertical-line"></div>
+                    <div class="result-pane">
+                        <h3>3.º Caso</h3>
+                        <ul>
+                            <li class="tot-amt"></li>
+                            <li class="len-amt"></li>
+                            <li class="dur-amt"></li>
+                            <li class="tax-amt"></li>
+                            <li class="spd-amt"></li>
+                            <li class="ini-amt"></li>
+                            <li class="mon-amt"></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="calculator" id="finance">
-            <form>
-                <h2 id="sale2">Financiamento</h2>
-                <label for="price">Depósito Inicial</label>
-                <div class="price-input"><input name="price" title="Preço" type="number" placeholder="500" min="500"
-                        max="9999999" step="1" required> €
+        <div>
+            <div class="banner1">
+                <img src="imgs/banner/SUV1_banner_pre-footer1.jpeg" class="banner">
+                <div class="centered">O SEU SUV USADO
+                    <br><br>
+                    <p>COMO ESCOLHER BEM O SEU SUV USADO</p>
                 </div>
-                <label for="price-finance">Financiamento Necessário</label>
-                <div class="price-input"><input name="price-finance" title="Preço" type="number" placeholder="500"
-                        min="500" max="9999999" step="1" required> €
+                <div class="centered-bottom">LEIA MAIS</div>
+            </div>
+            <div class="banner1">
+                <img src="imgs/banner/Occ_banner_pre-footer2.jpeg" class="banner">
+                <div class="centered">
+                    <p>PARA CONSEGUIR ENCONTRAR A MELHOR OFERTA, SIGA OS NOSSO CONSELHOS PARA A COMPRA!</p>
                 </div>
-                <label for="years">Anos de Financiamento</label>
-                <input name="years" title="Anos" type="number" placeholder="1" min="1" max="99" step="1" required>
-                <input type="submit" value="Calcular">
-            </form>
-            <div class="results">
-                <div class="result-pane">
-                    <h3>1.º Caso</h3>
-                    <ul>
-                        <li class="tot-amt"></li>
-                        <li class="len-amt"></li>
-                        <li class="dur-amt"></li>
-                        <li class="tax-amt"></li>
-                        <li class="spd-amt"></li>
-                        <li class="ini-amt"></li>
-                        <li class="mon-amt"></li>
-                    </ul>
-                </div>
-                <div class="vertical-line">
-                </div>
-                <div class="result-pane">
-                    <h3>2.º Caso</h3>
-                    <ul>
-                        <li class="tot-amt"></li>
-                        <li class="len-amt"></li>
-                        <li class="dur-amt"></li>
-                        <li class="tax-amt"></li>
-                        <li class="spd-amt"></li>
-                        <li class="ini-amt"></li>
-                        <li class="mon-amt"></li>
-                    </ul>
-                </div>
-                <div class="vertical-line"></div>
-                <div class="result-pane">
-                    <h3>3.º Caso</h3>
-                    <ul>
-                        <li class="tot-amt"></li>
-                        <li class="len-amt"></li>
-                        <li class="dur-amt"></li>
-                        <li class="tax-amt"></li>
-                        <li class="spd-amt"></li>
-                        <li class="ini-amt"></li>
-                        <li class="mon-amt"></li>
-                    </ul>
-                </div>
+                <div class="centered-bottom">LEIA MAIS</div>
             </div>
         </div>
-    </div>
-    <div>
-        <div class="banner1">
-            <img src="imgs/banner/SUV1_banner_pre-footer1.jpeg" class="banner">
-            <div class="centered">O SEU SUV USADO
-                <br><br>
-                <p>COMO ESCOLHER BEM O SEU SUV USADO</p>
-            </div>
-            <div class="centered-bottom">LEIA MAIS</div>
-        </div>
-        <div class="banner1">
-            <img src="imgs/banner/Occ_banner_pre-footer2.jpeg" class="banner">
-            <div class="centered">
-                <p>PARA CONSEGUIR ENCONTRAR A MELHOR OFERTA, SIGA OS NOSSO CONSELHOS PARA A COMPRA!</p>
-            </div>
-            <div class="centered-bottom">LEIA MAIS</div>
-        </div>
-    </div>
+    </main>
     <footer>
         <div id="discover-new">
             <br>
