--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
             <li>Política de Privacidade</li>
         </ul>
     </footer>
-    <script src="scripts/script.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
